Lucene contrib change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Trunk (not yet released) =======================

Build

 * LUCENE-2845: Moved contrib/benchmark to modules.

 * LUCENE-2995: Moved contrib/spellchecker into modules/suggest.

 * LUCENE-3285: Moved contrib/queryparser into modules/queryparser

New Features

 * LUCENE-2604: Added RegexpQuery support to contrib/queryparser.
   (Simon Willnauer, Robert Muir)

 * LUCENE-2373: Added a Codec implementation that works with append-only
   filesystems (such as e.g. Hadoop DFS). SegmentInfos writing/reading
   code is refactored to support append-only FS, and to allow for future
   customization of per-segment information. (Andrzej Bialecki)

 * LUCENE-2479: Added ability to provide a sort comparator for spelling suggestions along
   with two implementations.  The existing comparator (score, then frequency) is the default (Grant Ingersoll)

 * LUCENE-2608: Added the ability to specify the accuracy at method time in the SpellChecker.  The per class
   method is also still available.  (Grant Ingersoll)
    
 * LUCENE-2507: Added DirectSpellChecker, which retrieves correction candidates directly 
   from the term dictionary using levenshtein automata.  (Robert Muir)
  
API Changes

 * LUCENE-2606: Changed RegexCapabilities interface to fix thread 
   safety, serialization, and performance problems. If you have
   written a custom RegexCapabilities it will need to be updated
   to the new API.  (Robert Muir, Uwe Schindler)

 * LUCENE-2638 MakeHighFreqTerms.TermStats public to make it more useful
   for API use. (Andrzej Bialecki)

 * LUCENE-2912: The field-specific hashmaps in SweetSpotSimilarity were removed.
   Instead, use SimilarityProvider to return different SweetSpotSimilaritys
   for different fields, this way all parameters (such as TF factors) can be 
   customized on a per-field basis.  (Robert Muir)
